# IDPdatabank

./: .gitignore  README.md  pyproject.toml
Data/Experiments/spin_relaxation/BMRBid15014/: fasta.yaml  spin_relaxation_times.yaml
Data/Experiments/spin_relaxation/BMRBid15144/: fasta.yaml  spin_relaxation_times.yaml
Data/Experiments/spin_relaxation/BMRBid15254/: T1_metadata.yaml  T2_metadata.yaml  fasta.yaml  spin_relaxation_times.yaml
Data/Experiments/spin_relaxation/BMRBid15364/: T1_metadata.yaml  T2_metadata.yaml  fasta.yaml  hetNOE_metadata.yaml  spin_relaxation_times.yaml
Data/Experiments/spin_relaxation/BMRBid15578/: T1_metadata.yaml  T2_metadata.yaml  fasta.yaml  hetNOE_metadata.yaml  spin_relaxation_times.yaml
Data/Experiments/spin_relaxation/BMRBid15655/: fasta.yaml  spin_relaxation_times.yaml
Data/Experiments/spin_relaxation/BMRBid15703/: T1_metadata.yaml  T2_metadata.yaml  fasta.yaml  (+1 more)
Data/Molecules/protein/: README.yaml
Data/info_files/1/: info.yaml
Data/info_files/2/: info.yaml
Scripts/: requirements.txt
Scripts/AnalyzeDatabank/: calcProperties.py  plotting.ipynb
Scripts/BuildDatabank/: AddData.py  README.md  __init__.py  buffer_manager.py  buffer_molecule_data.py  build_databank_utils.py  create_experimental_data_file.py  databank_general_utils.py  experiment.py  file_handler.py  parameter_comparator.py  searchDatabank.py  simulation.py  test_imports.py
Scripts/DatabankLib/: core.py  databankio.py  protein_functions.py  protein_functions.py~
Scripts/DatabankLib/settings/: engines.py
tests/: test_buffer_charges.py
(+355 files in other folders)
