[tool.poetry]
name = "idpdatabank"
version = "0.1.0"
description = "IDP Databank Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "Scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.0"
pytest = "^7.0.0"
pyyaml = "^5.4.1"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
matplotlib = "^3.4.0"
MDAnalysis = "^2.0.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
